--- a/front-elplus-ts/src/styles/layout.scss
+++ b/front-elplus-ts/src/styles/layout.scss
@@ -91,6 +91,7 @@ $transition-time: 0.2s;
 
           &:hover {
             color: #409EFF;
+            background-color: transparent;
           }
 
           &.is-active {
