--- a/front-elplus-ts/src/styles/layout-v2.scss
+++ b/front-elplus-ts/src/styles/layout-v2.scss
@@ -250,11 +250,12 @@ html.dark,
         .toolbar {
           display: flex;
           align-items: center;
+          margin-left: auto;
+          line-height: 20px;
 
           & > * {
-            margin-left: 15px;
-            color: var(--navbar-text-color);
-            transition: color $transition-time;
+            margin-left: 10px;
+            margin-right: 20px;
           }
         }
       }
